Adds four shapes and three lights

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <canvas id="myCanvas"></canvas>
   <!-- Compiled and minified JavaScript -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/101/three.min.js"></script>
-  <script src="js/project.js"></script>
+  <script type="module" src="js/project.js"></script>
 
 </body>
 </html>
