Add scaling to octahedron

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
             <label for="shapeToggle"></label>
           </div>
         </li>
+        <li>
+          <p>Toggle Box Rotation</p>
+          <div class="slideThree">
+            <input type="checkbox" value="None" id="scaleToggle" />
+            <label for="scaleToggle"></label>
+          </div>
+        </li>
       </ul>
     </div>
     <canvas id="myCanvas"></canvas>
