--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
         </li>
         <li>
-          <p>Toggle Box Rotation</p>
+          <p>Toggle Shape Scale</p>
           <div class="slideThree">
             <input type="checkbox" value="None" id="scaleToggle" />
             <label for="scaleToggle"></label>
